AWS/hp-infra-aws/00_foundation/security/keycloak/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
spec:
  hosts:
    - auth.homeplate.site
  gateways:
    - istio-system/homeplate-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: keycloak.keycloak.svc.cluster.local
            port:
              number: 80
      headers:
        request:
          set:
            X-Forwarded-Proto: "https"
            X-Forwarded-Port: "443"
